docker file added

--- a/package.json
+++ b/package.json
@@ -2,7 +2,15 @@
   "name": "reactive-booklist",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:8989",
   "dependencies": {
+    "axios": "^0.18.0",
+    "body-parser": "^1.18.3",
+    "bookshelf": "^0.13.3",
+    "express": "^4.16.4",
+    "knex": "^0.15.2",
+    "method-override": "^3.0.0",
+    "pg": "^7.6.1",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-redux": "^5.1.1",
@@ -10,6 +18,7 @@
     "redux": "^4.0.1"
   },
   "scripts": {
+    "dev": "./node_modules/.bin/nodemon ./server/index.js",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -23,5 +32,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "nodemon": "^1.18.6"
+  }
 }
