--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
     "bookshelf": "^0.13.3",
+    "dotenv": "^6.1.0",
     "express": "^4.16.4",
     "knex": "^0.15.2",
     "method-override": "^3.0.0",
@@ -22,7 +23,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "db:migrate": "POSTGRES_HOSTNAME=localhost ./node_modules/.bin/knex migrate:latest",
+    "db:rollback": "POSTGRES_HOSTNAME=localhost ./node_modules/.bin/knex migrate:rollback",
+    "db:seed": "POSTGRES_HOSTNAME=localhost ./node_modules/.bin/knex seed:run"
   },
   "eslintConfig": {
     "extends": "react-app"
